QtBeef/src/Qt/qlistwidget.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QListWidgetItem
// --------------------------------------------------------------
[CRepr]
struct QListWidgetItem_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
	public void** Clone()
	{
		return CQt.QListWidgetItem_Clone((.)this.Ptr);
	}
	public void** ListWidget()
	{
		return CQt.QListWidgetItem_ListWidget((.)this.Ptr);
	}
	public void SetSelected(bool selectVal)
	{
		CQt.QListWidgetItem_SetSelected((.)this.Ptr, selectVal);
	}
	public bool IsSelected()
	{
		return CQt.QListWidgetItem_IsSelected((.)this.Ptr);
	}
	public void SetHidden(bool hide)
	{
		CQt.QListWidgetItem_SetHidden((.)this.Ptr, hide);
	}
	public bool IsHidden()
	{
		return CQt.QListWidgetItem_IsHidden((.)this.Ptr);
	}
	public void* Flags()
	{
		return CQt.QListWidgetItem_Flags((.)this.Ptr);
	}
	public void SetFlags(void* flags)
	{
		CQt.QListWidgetItem_SetFlags((.)this.Ptr, flags);
	}
	public void Text(String outStr)
	{
		CQt.QListWidgetItem_Text((.)this.Ptr);
	}
	public void SetText(String text)
	{
		CQt.QListWidgetItem_SetText((.)this.Ptr, libqt_string(text));
	}
	public QIcon_Ptr Icon()
	{
		return QIcon_Ptr(CQt.QListWidgetItem_Icon((.)this.Ptr));
	}
	public void SetIcon(IQIcon icon)
	{
		CQt.QListWidgetItem_SetIcon((.)this.Ptr, (.)icon?.ObjectPtr);
	}
	public void StatusTip(String outStr)
	{
		CQt.QListWidgetItem_StatusTip((.)this.Ptr);
	}
	public void SetStatusTip(String statusTip)
	{
		CQt.QListWidgetItem_SetStatusTip((.)this.Ptr, libqt_string(statusTip));
	}
	public void ToolTip(String outStr)
	{
		CQt.QListWidgetItem_ToolTip((.)this.Ptr);
	}
	public void SetToolTip(String toolTip)
	{
		CQt.QListWidgetItem_SetToolTip((.)this.Ptr, libqt_string(toolTip));
	}
	public void WhatsThis(String outStr)
	{
		CQt.QListWidgetItem_WhatsThis((.)this.Ptr);
	}
	public void SetWhatsThis(String whatsThis)
	{
		CQt.QListWidgetItem_SetWhatsThis((.)this.Ptr, libqt_string(whatsThis));
	}
	public QFont_Ptr Font()
	{
		return QFont_Ptr(CQt.QListWidgetItem_Font((.)this.Ptr));
	}
	public void SetFont(IQFont font)
	{
		CQt.QListWidgetItem_SetFont((.)this.Ptr, (.)font?.ObjectPtr);
	}
	public c_int TextAlignment()
	{
		return CQt.QListWidgetItem_TextAlignment((.)this.Ptr);
	}
	public void SetTextAlignment(c_int alignment)
	{
		CQt.QListWidgetItem_SetTextAlignment((.)this.Ptr, alignment);
	}
	public void SetTextAlignment2(Qt_AlignmentFlag alignment)
	{
		CQt.QListWidgetItem_SetTextAlignment2((.)this.Ptr, alignment);
	}
	public void SetTextAlignment3(void* alignment)
	{
		CQt.QListWidgetItem_SetTextAlignment3((.)this.Ptr, alignment);
	}
	public QBrush_Ptr Background()
	{
		return QBrush_Ptr(CQt.QListWidgetItem_Background((.)this.Ptr));
	}
	public void SetBackground(IQBrush brush)
	{
		CQt.QListWidgetItem_SetBackground((.)this.Ptr, (.)brush?.ObjectPtr);
	}
	public QBrush_Ptr Foreground()
	{
		return QBrush_Ptr(CQt.QListWidgetItem_Foreground((.)this.Ptr));
	}
	public void SetForeground(IQBrush brush)
	{
		CQt.QListWidgetItem_SetForeground((.)this.Ptr, (.)brush?.ObjectPtr);
	}
	public Qt_CheckState CheckState()
	{
		return CQt.QListWidgetItem_CheckState((.)this.Ptr);
	}
	public void SetCheckState(Qt_CheckState state)
	{
		CQt.QListWidgetItem_SetCheckState((.)this.Ptr, state);
	}
	public QSize_Ptr SizeHint()
	{
		return QSize_Ptr(CQt.QListWidgetItem_SizeHint((.)this.Ptr));
	}
	public void SetSizeHint(IQSize size)
	{
		CQt.QListWidgetItem_SetSizeHint((.)this.Ptr, (.)size?.ObjectPtr);
	}
	public QVariant_Ptr Data(c_int role)
	{
		return QVariant_Ptr(CQt.QListWidgetItem_Data((.)this.Ptr, role));
	}
	public void SetData(c_int role, IQVariant value)
	{
		CQt.QListWidgetItem_SetData((.)this.Ptr, role, (.)value?.ObjectPtr);
	}
	public void Read(IQDataStream _in)
	{
		CQt.QListWidgetItem_Read((.)this.Ptr, (.)_in?.ObjectPtr);
	}
	public void Write(IQDataStream _out)
	{
		CQt.QListWidgetItem_Write((.)this.Ptr, (.)_out?.ObjectPtr);
	}
	public c_int Type()
	{
		return CQt.QListWidgetItem_Type((.)this.Ptr);
	}
}
class QListWidgetItem : IQListWidgetItem
{
	private QListWidgetItem_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	static void QtBf_ConnectSignals(Self obj)
	{
		CQt.ObjectHandleMap[obj.ObjectPtr] = obj;
		CQt.QListWidgetItem_OnClone(obj.ObjectPtr,  => QtBeef_QListWidgetItem_OnClone);
		CQt.QListWidgetItem_OnData(obj.ObjectPtr,  => QtBeef_QListWidgetItem_OnData);
		CQt.QListWidgetItem_OnSetData(obj.ObjectPtr,  => QtBeef_QListWidgetItem_OnSetData);
		CQt.QListWidgetItem_OnRead(obj.ObjectPtr,  => QtBeef_QListWidgetItem_OnRead);
		CQt.QListWidgetItem_OnWrite(obj.ObjectPtr,  => QtBeef_QListWidgetItem_OnWrite);
	}
	static void QtBeef_QListWidgetItem_OnClone(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnClone();
	}
	static void QtBeef_QListWidgetItem_OnData(void* ptr, c_int role)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnData(role);
	}
	static void QtBeef_QListWidgetItem_OnSetData(void* ptr, c_int role, void** value)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnSetData(role, value);
	}
	static void QtBeef_QListWidgetItem_OnRead(void* ptr, void** _in)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnRead(_in);
	}
	static void QtBeef_QListWidgetItem_OnWrite(void* ptr, void** _out)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnWrite(_out);
	}
	public this(QListWidgetItem_Ptr ptr)
	{
		this.ptr = ptr;
		QtBf_ConnectSignals(this);
	}
	public this()
	{
		this.ptr = CQt.QListWidgetItem_new();
		QtBf_ConnectSignals(this);
	}
	public this(String text)
	{
		this.ptr = CQt.QListWidgetItem_new2(libqt_string(text));
		QtBf_ConnectSignals(this);
	}
	public this(IQIcon icon, String text)
	{
		this.ptr = CQt.QListWidgetItem_new3((.)icon?.ObjectPtr, libqt_string(text));
		QtBf_ConnectSignals(this);
	}
	public this(void** other)
	{
		this.ptr = CQt.QListWidgetItem_new4(other);
		QtBf_ConnectSignals(this);
	}
	public this(void** listview, c_int type)
	{
		this.ptr = CQt.QListWidgetItem_new6(listview, type);
		QtBf_ConnectSignals(this);
	}
	public this(String text, void** listview)
	{
		this.ptr = CQt.QListWidgetItem_new7(libqt_string(text), listview);
		QtBf_ConnectSignals(this);
	}
	public this(String text, void** listview, c_int type)
	{
		this.ptr = CQt.QListWidgetItem_new8(libqt_string(text), listview, type);
		QtBf_ConnectSignals(this);
	}
	public this(IQIcon icon, String text, void** listview)
	{
		this.ptr = CQt.QListWidgetItem_new9((.)icon?.ObjectPtr, libqt_string(text), listview);
		QtBf_ConnectSignals(this);
	}
	public this(IQIcon icon, String text, void** listview, c_int type)
	{
		this.ptr = CQt.QListWidgetItem_new10((.)icon?.ObjectPtr, libqt_string(text), listview, type);
		QtBf_ConnectSignals(this);
	}
	public ~this()
	{
		CQt.QListWidgetItem_Delete(this.ptr);
	}
	public  virtual void** OnClone()
	{
		return default;
	}
	public void** ListWidget()
	{
		return this.ptr.ListWidget();
	}
	public void SetSelected(bool selectVal)
	{
		this.ptr.SetSelected(selectVal);
	}
	public bool IsSelected()
	{
		return this.ptr.IsSelected();
	}
	public void SetHidden(bool hide)
	{
		this.ptr.SetHidden(hide);
	}
	public bool IsHidden()
	{
		return this.ptr.IsHidden();
	}
	public void* Flags()
	{
		return this.ptr.Flags();
	}
	public void SetFlags(void* flags)
	{
		this.ptr.SetFlags(flags);
	}
	public void Text(String outStr)
	{
		this.ptr.Text(outStr);
	}
	public void SetText(String text)
	{
		this.ptr.SetText(text);
	}
	public QIcon_Ptr Icon()
	{
		return this.ptr.Icon();
	}
	public void SetIcon(IQIcon icon)
	{
		this.ptr.SetIcon(icon);
	}
	public void StatusTip(String outStr)
	{
		this.ptr.StatusTip(outStr);
	}
	public void SetStatusTip(String statusTip)
	{
		this.ptr.SetStatusTip(statusTip);
	}
	public void ToolTip(String outStr)
	{
		this.ptr.ToolTip(outStr);
	}
	public void SetToolTip(String toolTip)
	{
		this.ptr.SetToolTip(toolTip);
	}
	public void WhatsThis(String outStr)
	{
		this.ptr.WhatsThis(outStr);
	}
	public void SetWhatsThis(String whatsThis)
	{
		this.ptr.SetWhatsThis(whatsThis);
	}
	public QFont_Ptr Font()
	{
		return this.ptr.Font();
	}
	public void SetFont(IQFont font)
	{
		this.ptr.SetFont(font);
	}
	public c_int TextAlignment()
	{
		return this.ptr.TextAlignment();
	}
	public void SetTextAlignment(c_int alignment)
	{
		this.ptr.SetTextAlignment(alignment);
	}
	public void SetTextAlignment2(Qt_AlignmentFlag alignment)
	{
		this.ptr.SetTextAlignment2(alignment);
	}
	public void SetTextAlignment3(void* alignment)
	{
		this.ptr.SetTextAlignment3(alignment);
	}
	public QBrush_Ptr Background()
	{
		return this.ptr.Background();
	}
	public void SetBackground(IQBrush brush)
	{
		this.ptr.SetBackground(brush);
	}
	public QBrush_Ptr Foreground()
	{
		return this.ptr.Foreground();
	}
	public void SetForeground(IQBrush brush)
	{
		this.ptr.SetForeground(brush);
	}
	public Qt_CheckState CheckState()
	{
		return this.ptr.CheckState();
	}
	public void SetCheckState(Qt_CheckState state)
	{
		this.ptr.SetCheckState(state);
	}
	public QSize_Ptr SizeHint()
	{
		return this.ptr.SizeHint();
	}
	public void SetSizeHint(IQSize size)
	{
		this.ptr.SetSizeHint(size);
	}
	public  virtual QVariant_Ptr OnData(c_int role)
	{
		return default;
	}
	public  virtual void OnSetData(c_int role, void** value)
	{
	}
	public  virtual void OnRead(void** _in)
	{
	}
	public  virtual void OnWrite(void** _out)
	{
	}
	public c_int Type()
	{
		return this.ptr.Type();
	}
}
interface IQListWidgetItem : IQtObjectInterface
{
}
extension CQt
{
	[LinkName("QListWidgetItem_new")]
	public static extern QListWidgetItem_Ptr QListWidgetItem_new();
	[LinkName("QListWidgetItem_new2")]
	public static extern QListWidgetItem_Ptr QListWidgetItem_new2(libqt_string text);
	[LinkName("QListWidgetItem_new3")]
	public static extern QListWidgetItem_Ptr QListWidgetItem_new3(void** icon, libqt_string text);
	[LinkName("QListWidgetItem_new4")]
	public static extern QListWidgetItem_Ptr QListWidgetItem_new4(void** other);
	[LinkName("QListWidgetItem_new5")]
	public static extern QListWidgetItem_Ptr QListWidgetItem_new5(void** listview);
	[LinkName("QListWidgetItem_new6")]
	public static extern QListWidgetItem_Ptr QListWidgetItem_new6(void** listview, c_int type);
	[LinkName("QListWidgetItem_new7")]
	public static extern QListWidgetItem_Ptr QListWidgetItem_new7(libqt_string text, void** listview);
	[LinkName("QListWidgetItem_new8")]
	public static extern QListWidgetItem_Ptr QListWidgetItem_new8(libqt_string text, void** listview, c_int type);
	[LinkName("QListWidgetItem_new9")]
	public static extern QListWidgetItem_Ptr QListWidgetItem_new9(void** icon, libqt_string text, void** listview);
	[LinkName("QListWidgetItem_new10")]
	public static extern QListWidgetItem_Ptr QListWidgetItem_new10(void** icon, libqt_string text, void** listview, c_int type);
	[LinkName("QListWidgetItem_Delete")]
	public static extern void QListWidgetItem_Delete(QListWidgetItem_Ptr self);
	[LinkName("QListWidgetItem_Clone")]
	public static extern void** QListWidgetItem_Clone(void* self);
	
	public function void QListWidgetItem_OnClone_action(void* self);
	[LinkName("QListWidgetItem_OnClone")]
	public static extern void** QListWidgetItem_OnClone(void* self, QListWidgetItem_OnClone_action _action);
